--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,5 +11,6 @@
             </div>
             <h2><%= product.price %></h2>
             <h2><%= product.description %></h2>
+            <%- include('../includes/add-to-cart.ejs') %>
         </main>
-        <%- include('../includes/end.ejs') %>
+        <%- include('../includes/end.ejs',{product:product}) %>
